# meta-learning-plugin

./: .gitignore  README.md  SOP_logic.md  agent-supervisor-growth-proposal.md  config.deskclaw.yaml  config.yaml  install.sh  meta-learning同类工作与创新点研究报告.md  meta-learning问题定义.md  pyproject.toml  uninstall.sh  三层自进化学习架构_融合方案.md
.cursor/: mcp.json
.cursor/plans/: c-b-a_架构-任务-诊断修复_30290041.plan.md  deskclaw-lingmin-hybrid-fix_7b8e2c98.plan.md  fix_thinking_and_rerun_7a151368.plan.md  gdpval_meta-learning_validation_cb51c142.plan.md  (+7 more)
abtest/: config.deskclaw-eval.yaml  config.gdpval.yaml  config.interactive.yaml  config.meta-learning.A.yaml  config.meta-learning.B.yaml
docs/: DeskClaw_AI_Agent_自进化学习改进方案.md  MemGov论文框架.md  pipeline_agent_meta_learning.html  pipeline_rl_training.html  rl_algorithm_comparison.md
openclaw-plugin/: index.ts  openclaw.plugin.json
reports/: ab_test_analyzer.py
schemas/: config.yaml  experience.yaml  signal.yaml
scripts/: e2e_taxonomy_test.py  eval_deskclaw_meta.py  gdpval_meta_test.py  gdpval_signal_adapter.py  interactive_meta_test.py  main_test.py  validate_layer2_fixes.py  verify_taxonomy_effect.py
tests/: conftest.py  real_usage_test_cases.md  test_confidence_decay.py  test_consolidate.py  test_enrich_session.py  test_io.py  test_layer2_fixes.py  test_layer3.py  test_llm.py  test_materialize.py  test_materialize_prompt.py  test_mcp_server.py  test_models.py  test_orchestrator.py  test_quick_think.py  test_signal_capture.py  test_skill_evolve.py  test_sync_diversity.py  test_taxonomy.py  test_taxonomy_dedup.py
(+45 files in other folders)
