[project]
name = "meta-learning"
version = "0.1.0"
description = "Three-layer self-evolving learning architecture for AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6,<3",
    "pyyaml>=6.0,<7",
    "httpx>=0.27,<1",
    "openai>=2.30.0",
    "numpy>=2.4.3",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.9,<1",
]
mcp = [
    "mcp>=1.20",
]

[project.scripts]
meta-learning-mcp = "meta_learning.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meta_learning"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/mock_resources/sessions.py" = ["E501"]
"tests/mock_resources/memory.py" = ["E501"]
